# garagem

./: .gitignore  db.sqlite3  pyproject.toml
config/: settings.py
garagem/: admin.py
garagem/migrations/: 0001_initial.py
garagem/models/: __init__.py  cor.py  marca.py  veiculo.py
garagem/serializers/: __init__.py  veiculo.py
garagem/views/: __init__.py
